31-aws-eks-ecomm-1-istio/3-Policies/allow-nothing.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: shoppingportal
spec:
  action: ALLOW
  # the rules field is not specified, and the policy will never match.
