31-aws-eks-ecomm-1-istio/3-Policies/allow-productreview.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: productreviewms-viewer
  namespace: shoppingportal
spec:
  selector:
    matchLabels:
      name: productreviewms
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
