31-aws-eks-ecomm-1-istio/3-Policies/allow_ui_get.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "ui-allow"
  namespace: shoppingportal
spec:
  selector:
    matchLabels:
      name: k8uiworkshop
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
